[package]
name = "uni-gl"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>", "jice <jice.nospam@gmail.com>"]
description = "Unrust native/wasm openGL compatibility layer"
license = "MIT"
documentation = "https://docs.rs/uni-gl"
repository = "https://github.com/unrust/uni-gl"
keywords = ["opengl", "wasm"]

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.6.0"

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.10"
wasm-bindgen = "0.2.33"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console'
]

[dev-dependencies]
uni-app = "0.1.*"